--- a/village/src/App.css
+++ b/village/src/App.css
@@ -1,3 +1,20 @@
 .App {
   text-align: center;
+  background-image:url(https://vignette.wikia.nocookie.net/smurfs/images/6/6d/Gutsy.png/revision/latest?cb=20130805131536);
+  background-repeat: no-repeat;
+  background-size: auto;
+  text-shadow: -1.3px -2px 1px #2785bd;
+}
+
+
+nav{
+  display: flex;
+  justify-content: space-evenly;
+  background: darkgray;
+}
+nav>a{
+  font: 20px;
+  font-weight: 700;  
+  color: rgb(56, 125, 252);
+
 }
